<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.example.nils.rhymetime.PlayActivity"
    android:id="@+id/activity_play"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@color/generalBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wordToRhymeWithTV"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/timer"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:padding="10dp"
        android:background="#000"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/lineView"
        android:background="@color/black"
        android:layout_marginTop="70dp"
        android:visibility="invisible">

    </View>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/lineView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="100dp"
        android:numColumns="4"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:id="@+id/alreadyGuessedGridView"
        android:scrollbars="vertical" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rhyme"
        android:id="@+id/currentWordET"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:visibility="invisible"
        android:imeOptions="actionSearch"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/checkButton"
        android:onClick="callValidateUserInput"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/currentWordET"
        android:layout_toEndOf="@id/currentWordET"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/infoTV"
        android:text="@string/press_the_back_button_one_more_time_to_quit_the_game"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:visibility="invisible" />

</RelativeLayout>
